# zodc-service-auth

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  pyproject.toml
.github/workflows/: docker-build.yml
alembic_migrations/: env.py
alembic_migrations/versions/: 003b2377de38_add_user.py  0cc49ab426cc_add_refresh_token_table.py  0f46a73fdb9b_fix_issues_with_rbac.py  160ae1a95ba1_fix_issues_with_rbac.py  1ee876c695cd_upgrade_rbac_with_project_role.py  20dca4700094_create_initial_tables.py  427226250b95_auto_increment_id.py  46fd3a9f7227_create_initial_table.py  4eed6e79e00f_fix_role_permission.py  4f50755db090_add_is_jira_linked.py  6ee4eb19bab3_added_is_active_is_system_role_to_roles_.py  6f0cc2e7d012_added_name_to_project_column.py  70ea455c38f1_create_base_model.py  782d472e6d24_remove_id_from_role_permission.py  899d729bcae4_added_is_active_on_users_table.py  994d33969119_fixing.py  9dbdbaaf568e_generate_all_tables_2.py  a184ff8e5c28_length_config_for_microsoft_refresh_.py  a7e3e7c5e670_fix_issues_with_rbac.py  aacbb419595e_add_jira_account_id_column.py  aefff01db3b6_add_microsoft_refresh_token.py  b08183af629b_initial_migration.py  b1e83a96aa83_add_is_jira_linked.py  b20d3cde6a83_generate_all_tables.py  b3e0f9785a18_add_project_avatar_url.py  c57a3821f8ff_update_user_project_role.py  c958d22a953b_length_config_for_microsoft_refresh_.py  cb3c4a5e76f1_fix_role_permission.py  cdfde7e28953_add_user_is_system_user.py  e48ea4cac4b6_add_roles_and_permissions.py  e4ef0057301c_add_microsoft_id_column.py  ecf624488074_add_group_to_permission.py  ed1e4f679af1_create_rbac_tables.py  f155f72a620f_add_user_avatar_url.py  f299aba61e9c_auto_increment_id.py  fc5ebe690296_create_initial.py
docs/: ARCHITECTURE.md  CODE_CONVENTION.md  CONTRIBUTING.md
src/: main.py
src/app/background/: token_refresh.py
src/app/controllers/: auth_controller.py  calendar_controller.py  event_controller.py  internal_controller.py  permission_controller.py  project_controller.py  role_controller.py  task_controller.py  user_controller.py  util_controller.py
src/app/decorators/: auth_decorator.py
src/app/dependencies/: auth.py  calendar.py  common.py  internal.py  permission.py  project.py  role.py  user.py  util.py
src/app/exceptions/: auth.py  calendar.py
src/app/middlewares/: auth.py  auth_middleware.py  exception_handler.py  task_middleware.py
src/app/models/: task.py  user.py
src/app/repositories/: base_repository.py  task_repository.py  user_repository.py
src/app/routers/: auth_router.py  calendar_router.py  event_router.py  internal_router.py  permission_router.py  project_router.py  public_auth_router.py  role_router.py  task_router.py  user_router.py  util_router.py
src/app/schemas/: auth.py  calendar.py  task.py  user.py
src/app/services/: auth_service.py  calendar_service.py  event_service.py  graph_service.py  nats_subscribe_service.py  permission_service.py  project_service.py  role_service.py  task_service.py  token_service.py  user_service.py  util_service.py
src/app/utils/: response_wrapper.py
src/configs/: auth.py  database.py  logger.py  msal_config.py  redis_config.py  settings.py
src/domain/constants/: auth.py  nats_events.py  permissions.py  roles.py  user_events.py
src/domain/entities/: __init__.py  auth.py  calendar.py  permission.py  project.py  role.py  task.py  token_event.py  user.py  user_event.py  user_performance.py  user_project_history.py  user_project_role.py
src/scripts/: create_system_role.sql  run_format_code.sh  run_migrations.py
src/utils/: brcypt_util.py  sql.py
(+78 files in other folders)
