[tool.poetry]
name = "zodc-be"
version = "0.1.0"
description = "Backend side for zODC"
authors = ["vphoa342 <vphoa34@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.2"
uvicorn = "^0.32.0"
SQLAlchemy = "^2.0.36"
alembic = "^1.13.3"
pydantic = {extras = ["email"], version = "^2.10.1"}
loguru = "^0.7.2"
asyncpg = "^0.30.0"
pydantic-settings = "^2.6.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pyjwt = "^2.9.0"
requests = "^2.32.3"
ramda = "^0.7.6"
aiohttp = "^3.11.2"
msal = "^1.31.1"
redis = "^5.2.0"
msgraph-sdk = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
