[tool.poetry]
name = "zodc-be"
version = "0.1.0"
description = "Backend side for zODC"
authors = ["vphoa342 <vphoa34@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.2"
uvicorn = "^0.32.0"
SQLAlchemy = "^2.0.36"
alembic = "^1.13.3"
pydantic = {extras = ["email"], version = "^2.10.1"}
loguru = "^0.7.2"
asyncpg = "^0.30.0"
pydantic-settings = "^2.6.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pyjwt = "^2.9.0"
requests = "^2.32.3"
ramda = "^0.7.6"
aiohttp = "^3.11.2"
msal = "^1.31.1"
redis = "^5.2.0"
msgraph-sdk = "^1.12.0"
fastapi-azure-auth = "^5.0.1"
sqlmodel = "^0.0.22"
celery = "^5.4.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.2"
mypy = "^1.13.0"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
exclude = [
    ".venv",
    ".git",
    ".ruff_cache",
    "alembic_migrations",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "N",  # PEP8 naming convetions
    "D"  # pydocstyle
]
ignore = [
    "C901",  # too complex
    "W191",  # indentation contains tabs
    "D401",  # imperative mood
    "D415",  # first line should end with a period
    "D100",  # missing docstring in public module
    "E501",  # line too long
    "D104",  # missing docstring in public package
    "D102",  # missing docstring in public method
    "D101",  # missing docstring in public class
    "D106",  # missing docstring in nested class
    "D107",  # missing docstring in __init__
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.params.Depends", "fastapi.Query", "fastapi.params.Query"]

[tool.ruff.format]
indent-style = "space"
docstring-code-format = true
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.mypy]
strict = true
ignore_missing_imports = false
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = false
disallow_untyped_decorators = true
implicit_reexport = true
plugins = [
    "pydantic.mypy",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[virtualenvs]
in-project = true
